--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -5,10 +5,10 @@
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "87117022-ee79-418e-da0f-24937dc50bba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87117022-ee79-418e-da0f-24937dc50bba"
       },
       "outputs": [
         {
@@ -371,7 +371,27 @@
             "Requested to load SDXL\n",
             "Loading 1 new model\n",
             "[Fooocus Model Management] Moving model(s) has taken 1.21 seconds\n",
-            " 43% 13/30 [00:10<00:13,  1.24it/s]"
+            "100% 30/30 [00:24<00:00,  1.24it/s]\n",
+            "Requested to load AutoencoderKL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.29 seconds\n",
+            "[Fooocus] Saving image 1/2 to system ...\n",
+            "Image generated with private log at: /content/Fooocus/outputs/2025-03-28/log.html\n",
+            "Generating and saving time: 28.23 seconds\n",
+            "[Fooocus] Preparing task 2/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.59 seconds\n",
+            " 80% 24/30 [00:20<00:05,  1.16it/s]\n",
+            "User stopped\n",
+            "[Enhance] Skipping, preconditions aren't met\n",
+            "Processing time (total): 49.58 seconds\n",
+            "Requested to load SDXLClipModel\n",
+            "Requested to load GPT2LMHeadModel\n",
+            "Loading 2 new models\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.75 seconds\n"
           ]
         }
       ],
