--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Udeshya30/fooccus/blob/master/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -391,7 +401,125 @@
             "Requested to load SDXLClipModel\n",
             "Requested to load GPT2LMHeadModel\n",
             "Loading 2 new models\n",
-            "[Fooocus Model Management] Moving model(s) has taken 0.75 seconds\n"
+            "[Fooocus Model Management] Moving model(s) has taken 0.75 seconds\n",
+            "[Parameters] Adaptive CFG = 7\n",
+            "[Parameters] CLIP Skip = 2\n",
+            "[Parameters] Sharpness = 2\n",
+            "[Parameters] ControlNet Softness = 0.25\n",
+            "[Parameters] ADM Scale = 1.5 : 0.8 : 0.3\n",
+            "[Parameters] Seed = 3480130216925463366\n",
+            "[Parameters] CFG = 4\n",
+            "[Fooocus] Loading control models ...\n",
+            "[Parameters] Sampler = dpmpp_2m_sde_gpu - karras\n",
+            "[Parameters] Steps = 30 - 15\n",
+            "[Fooocus] Initializing ...\n",
+            "[Fooocus] Loading models ...\n",
+            "Refiner unloaded.\n",
+            "[Fooocus] Processing prompts ...\n",
+            "[Fooocus] Preparing Fooocus text #1 ...\n",
+            "[Prompt Expansion] full-body portrait of a beautiful Indian woman, age around 28 to 29, standing confidently, visible from head to toe, long black silky hair, warm brown skin tone, natural makeup, expressive dark eyes, wearing casual modern outfit like jeans and kurti or t-shirt with dupatta, smiling softly, realistic skin texture, mature and youthful vibe, natural posture, standing on a beach, soft sunlight, DSLR photo quality, ultra-realistic, 4K resolution, wide angle full-length shot, attractive, delicate, elegant, luxury, dramatic ambient background, bright colors, detailed, highly intricate, rich deep vibrant color, very, perfect, coherent, symmetry, enhanced, emotional, pretty, cute, innocent, iconic\n",
+            "[Fooocus] Preparing Fooocus text #2 ...\n",
+            "[Prompt Expansion] full-body portrait of a beautiful Indian woman, age around 28 to 29, standing confidently, visible from head to toe, long black silky hair, warm brown skin tone, natural makeup, expressive dark eyes, wearing casual modern outfit like jeans and kurti or t-shirt with dupatta, smiling softly, realistic skin texture, mature and youthful vibe, natural posture, standing on a beach, soft sunlight, DSLR photo quality, ultra-realistic, 4K resolution, wide angle full-length shot, intricate, very inspirational, elegant, innocent, delicate, dramatic cinematic light, sharp focus, vibrant colors, amazing coherent, symmetry, perfect, detailed, aesthetic, joyful, gorgeous, epic, stunning, background color, illuminated\n",
+            "[Fooocus] Encoding positive #1 ...\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.12 seconds\n",
+            "[Fooocus] Encoding positive #2 ...\n",
+            "[Fooocus] Encoding negative #1 ...\n",
+            "[Fooocus] Encoding negative #2 ...\n",
+            "[Parameters] Denoising Strength = 1.0\n",
+            "[Parameters] Initial Latent shape: Image Space (896, 1152)\n",
+            "Preparation time: 1.72 seconds\n",
+            "Using karras scheduler.\n",
+            "[Fooocus] Preparing task 1/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 1.22 seconds\n",
+            "100% 30/30 [00:24<00:00,  1.23it/s]\n",
+            "Requested to load AutoencoderKL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.28 seconds\n",
+            "[Fooocus] Saving image 1/2 to system ...\n",
+            "Image generated with private log at: /content/Fooocus/outputs/2025-03-28/log.html\n",
+            "Generating and saving time: 28.25 seconds\n",
+            "[Fooocus] Preparing task 2/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.59 seconds\n",
+            "100% 30/30 [00:24<00:00,  1.21it/s]\n",
+            "Requested to load AutoencoderKL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.29 seconds\n",
+            "[Fooocus] Saving image 2/2 to system ...\n",
+            "Image generated with private log at: /content/Fooocus/outputs/2025-03-28/log.html\n",
+            "Generating and saving time: 28.15 seconds\n",
+            "[Enhance] Skipping, preconditions aren't met\n",
+            "Processing time (total): 56.40 seconds\n",
+            "Requested to load SDXLClipModel\n",
+            "Requested to load GPT2LMHeadModel\n",
+            "Loading 2 new models\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.77 seconds\n",
+            "[Parameters] Adaptive CFG = 7\n",
+            "[Parameters] CLIP Skip = 2\n",
+            "[Parameters] Sharpness = 2\n",
+            "[Parameters] ControlNet Softness = 0.25\n",
+            "[Parameters] ADM Scale = 1.5 : 0.8 : 0.3\n",
+            "[Parameters] Seed = 2774683963632424163\n",
+            "[Parameters] CFG = 4\n",
+            "[Fooocus] Loading control models ...\n",
+            "[Parameters] Sampler = dpmpp_2m_sde_gpu - karras\n",
+            "[Parameters] Steps = 30 - 15\n",
+            "[Fooocus] Initializing ...\n",
+            "[Fooocus] Loading models ...\n",
+            "Refiner unloaded.\n",
+            "[Fooocus] Processing prompts ...\n",
+            "[Fooocus] Preparing Fooocus text #1 ...\n",
+            "[Prompt Expansion] indian model type girl, beach background, age 28, wearing jeans, realistic image, dslr captured, sharp focus, clear, detailed, cute, elegant, very coherent, ambient light, smart, enhanced detail, beautiful, creative, bright, lovely, symmetry, striking, rich, iconic, fine, complex, brilliant, perfect composition, professional, winning, awesome\n",
+            "[Fooocus] Preparing Fooocus text #2 ...\n",
+            "[Prompt Expansion] indian model type girl, beach background, age 28, wearing jeans, realistic image, dslr captured, sharp focus, brilliant thought, highly detailed, very stylish, stunning, futuristic, luxurious, intricate, cinematic, complex, colorful, fine detail, ambient light, dynamic composition, magic, vibrant colors, cute, iconic, innocent, beautiful, epic, focused\n",
+            "[Fooocus] Encoding positive #1 ...\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.12 seconds\n",
+            "[Fooocus] Encoding positive #2 ...\n",
+            "[Fooocus] Encoding negative #1 ...\n",
+            "[Fooocus] Encoding negative #2 ...\n",
+            "[Parameters] Denoising Strength = 1.0\n",
+            "[Parameters] Initial Latent shape: Image Space (896, 1152)\n",
+            "Preparation time: 1.71 seconds\n",
+            "Using karras scheduler.\n",
+            "[Fooocus] Preparing task 1/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 1.35 seconds\n",
+            "100% 30/30 [00:23<00:00,  1.25it/s]\n",
+            "Requested to load AutoencoderKL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.30 seconds\n",
+            "[Fooocus] Saving image 1/2 to system ...\n",
+            "Image generated with private log at: /content/Fooocus/outputs/2025-03-28/log.html\n",
+            "Generating and saving time: 28.10 seconds\n",
+            "[Fooocus] Preparing task 2/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.61 seconds\n",
+            "100% 30/30 [00:24<00:00,  1.21it/s]\n",
+            "Requested to load AutoencoderKL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.25 seconds\n",
+            "[Fooocus] Saving image 2/2 to system ...\n",
+            "Image generated with private log at: /content/Fooocus/outputs/2025-03-28/log.html\n",
+            "Generating and saving time: 28.22 seconds\n",
+            "[Enhance] Skipping, preconditions aren't met\n",
+            "Processing time (total): 56.33 seconds\n",
+            "Requested to load SDXLClipModel\n",
+            "Requested to load GPT2LMHeadModel\n",
+            "Loading 2 new models\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.78 seconds\n"
           ]
         }
       ],
@@ -408,7 +536,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
